[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/audio.gd" type="Script" id=1]
[ext_resource path="res://audio/tap.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/bg.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/37154__volivieri__soccer-ball-hit-ground-01.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/player died.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/start1.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/spshield.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/level.wav" type="AudioStream" id=9]

[node name="audio" type="Node2D"]

script = ExtResource( 1 )

[node name="tap" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="bg" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -10.67
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="hit" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="click" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="lose" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="start" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="gem" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="level" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="sound_change" from="." to="." method="set_sound"]

[connection signal="finished" from="bg" to="." method="_on_bg_finished"]


